# timetable-ga

./: .coverage  .env  .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  dummy_data.json  main.py  models.py  pyproject.toml  utils.py
.github/workflows/: actions-ci.yml
tests/: test_api.py  test_main.py  test_model.py  test_pytest.py  test_utils.py
timetable_ga/: api.py  config.py  ga-consts.py  ga_consts.py  main.py  models.py  utils.py
