[project]
name = "timetable-ga"
version = "0.1.0"
description = ""
authors = [
    {name = "Kováts Máté",email = "kovats.mate@stud.uni-obuda.hu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "celery[redis] (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-bugbear = "^24.12.12"
flake8-comprehensions = "^3.16.0"
black = "^24.10.0"
isort = "^5.13.2"
yesqa = "^1.5.0"
pyupgrade = "^3.19.1"
interrogate = "^1.7.0"
pre-commit = "^4.1.0"
pylint = "^3.3.3"
pytest = "^8.3.4"
pytest-cov = "^6.1.1"


[tool.black]
line-length = 100
target_version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | env
)/
'''
